# markupcc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  REMDME  cmake_install.cmake  mkcc  mkcc.cpp  mkcc_doc.py  setup.sh
core/: main.cpp
core/include/: button.h  div.h  element.cpp  element.h  font.h  grid.h  paragraph.h  style.h
docs/: mkcc_doc.html  mkcc_doc.json
include/: compiler.h
mkcc_resource/: main.cpp  makefile  mkccmake.json
